--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0"
+  },
+  "dependencies": {
+    "moment": "^2.29.4"
   }
 }
